# UC3M

./: README.md
Proyectos y practicas/3º/Arquitectura de Computadores/Arq-Computadores-Practica-master/: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt
Proyectos y practicas/3º/Arquitectura de Computadores/Arq-Computadores-Practica-master/data/: output.fld
Proyectos y practicas/3º/Arquitectura de Computadores/Arq-Computadores-Practica-master/fluid/: CMakeLists.txt  fluid.cpp
Proyectos y practicas/3º/Arquitectura de Computadores/Arq-Computadores-Practica-master/ftest/: errorsTest.sh  largeTest.sh  output.fld  runTests.sh  smallTest.sh
Proyectos y practicas/3º/Arquitectura de Computadores/Arq-Computadores-Practica-master/ftest/inputFiles/: np_incorrect.fld  np_negative.fld
Proyectos y practicas/3º/Arquitectura de Computadores/Arq-Computadores-Practica-master/ftest/trazas/large/: boundint-base-1.trz  boundint-base-2.trz  boundint-base-3.trz  boundint-base-4.trz
Proyectos y practicas/3º/Arquitectura de Computadores/Arq-Computadores-Practica-master/ftest/trazas/small/: boundint-base-1.trz  boundint-base-2.trz
Proyectos y practicas/3º/Arquitectura de Computadores/Arq-Computadores-Practica-master/sim/: CMakeLists.txt  Vector3D.hpp  block.cpp  block.hpp  constants.h  errors.h  fileParticle.cpp  fileParticle.hpp  grid.cpp  grid.hpp  progargs.cpp  progargs.hpp  simParticle.cpp  simParticle.hpp
Proyectos y practicas/3º/Arquitectura de Computadores/Arq-Computadores-Practica-master/trazas/trz/trz/large/: acctransf-base-1.trz  acctransf-base-2.trz  acctransf-base-3.trz  acctransf-base-4.trz  acctransf-base-5.trz  boundint-base-5.trz  densinc-base-1.trz  densinc-base-2.trz  densinc-base-3.trz  densinc-base-4.trz  densinc-base-5.trz  denstransf-base-1.trz  denstransf-base-2.trz  denstransf-base-3.trz  denstransf-base-4.trz  denstransf-base-5.trz  initacc-base-1.trz  initacc-base-3.trz  initacc-base-4.trz  initacc-base-5.trz  motion-base-1.trz  motion-base-2.trz  motion-base-3.trz  motion-base-4.trz  motion-base-5.trz  partcol-base-1.trz  partcol-base-2.trz  partcol-base-3.trz  partcol-base-4.trz  partcol-base-5.trz  repos-base-2.trz
Proyectos y practicas/3º/Arquitectura de Computadores/Arq-Computadores-Practica-master/trazas/trz/trz/small/: acctransf-base-1.trz  acctransf-base-2.trz  acctransf-base-3.trz  acctransf-base-4.trz  acctransf-base-5.trz  boundint-base-3.trz  boundint-base-4.trz  boundint-base-5.trz  densinc-base-1.trz  densinc-base-2.trz  densinc-base-3.trz  densinc-base-4.trz  densinc-base-5.trz  denstransf-base-1.trz  denstransf-base-2.trz  denstransf-base-3.trz  denstransf-base-4.trz  denstransf-base-5.trz  initacc-base-1.trz  initacc-base-2.trz  initacc-base-5.trz  motion-base-1.trz  motion-base-2.trz  motion-base-3.trz  motion-base-4.trz  motion-base-5.trz  partcol-base-1.trz  partcol-base-2.trz  partcol-base-3.trz  partcol-base-4.trz  (+3 more)
Proyectos y practicas/3º/Arquitectura de Computadores/Arq-Computadores-Practica-master/utest/: CMakeLists.txt  block_test.cpp  fileParticle_test.cpp  grid_test.cpp  progargs_test.cpp  simParticle_test.cpp  testing.txt  vector_test.cpp
(+860 files in other folders)
